--- a/WebApplication4/WebApplication4/Views/Local/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Local/Index.cshtml
@@ -54,7 +54,7 @@
             </select>
         </div>
     </div>
-    
+
     @*@{
             Html.RenderPartial("_Search");
         }*@
@@ -77,7 +77,7 @@
                     <tr class="thead">
                         <th class="col-md-1">Código</th>
                         <th class="col-md-3">Descripción</th>
-                        <th class="col-md-3">Ubicación</th>                        
+                        <th class="col-md-3">Ubicación</th>
                         <th class="col-md-2">Provincia</th>
                         <th class="col-md-2">Departamento</th>
                         <th class="col-md-1">Estado</th>
@@ -94,20 +94,20 @@
                             <td>@db.Region.Find(row.idProvincia).nombre</td>
                             <td>@db.Region.Find(row.idRegion).nombre</td>
                             @{
-                                string state = "";
-                                if (row.estaActivo.HasValue)
-                                {
-                                    if ((bool)row.estaActivo)
-                                    { state = "Activo"; }
-                                    else { state = "Inactivo"; }
-                                }
+                        string state = "";
+                        if (row.estaActivo.HasValue)
+                        {
+                            if ((bool)row.estaActivo)
+                            { state = "Activo"; }
+                            else { state = "Inactivo"; }
+                        }
                             }
-                            <td>@state</td>                           
+                            <td>@state</td>
                         </tr>
                     }
                 </tbody>
             </table>
-        </div>        
+        </div>
     </div>
 </div>
 
@@ -138,7 +138,7 @@
                             @Html.EditorFor(model => model.descripcion, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.descripcion)
                         </div>
-                    </div>                    
+                    </div>
                     <div class="row form-group">
                         @Html.LabelFor(model => model.ubicacion, new { @class = "control-label col-md-3" })
                         <div class="col-md-8">
@@ -167,7 +167,7 @@
                         </center>
                     </div>
                 </div>
-            }            
+            }
         </div>
     </div>
 </div>
@@ -261,7 +261,7 @@
         //alert(evento);
         //alert(promocion);
         if (local != "" && local != null) {
-            if (estado != "False") {
+            if (estado != "Inactivo") {
                 $.ajax({
                     url: "@Url.Action("Delete","Local")",
                     data: { local: local },
@@ -291,7 +291,7 @@
         //alert(evento);
         //alert(promocion);
         if (local != "" && local != null) {
-            if (estado != "True") {
+            if (estado != "Activo") {
                 $.ajax({
                     url: "@Url.Action("Active","Local")",
                     data: { local: local },
@@ -315,7 +315,7 @@
         var local = $('#idLocalT').val();
         var estado = $('#EstadoLT').val();
         if (local != "") {
-            if (estado != "False") {
+            if (estado != "Inactivo") {
                 var elem = document.getElementById("idLocalT");
                 elem.value = "";
                 window.location.href = '/Local/Edit?local=' + local;
@@ -390,7 +390,7 @@
 <div class="modal fade" id="eliminar">
     <!--esta div pondra la pantalla oscura al presionar el boton-->
     <div class="modal-dialog">
-        <div class="modal-content">            
+        <div class="modal-content">
             <!--header de la ventana-->
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times; </button>
